syntax = "proto3";
option go_package = "./pb";

package pb;

message NodeInstallStatus {
	bool isRunning = 1;
	bool isFinished = 2;
	bool isOk = 3;
	string error = 4;
	string errorCode = 6;
	int64 updatedAt = 5;
}